udpate button on our commitment

--- a/index.html
+++ b/index.html
@@ -310,6 +310,18 @@
               <p>If you want to make an impact on energy, go to the center of consumption. Cities and buildings now account for 40% of global energy use. Air conditioning usage is expected to triple by 2050.</p>
             </div>
           </div>
+
+          <div class="custom-nav-blue">
+            <button class="prev">
+              <img class="img-front" src="./assets/img-prev.png" alt="" />
+              <img class="img-back" src="" alt="" />
+            </button>
+
+            <button class="next">
+              <img class="img-front" src="./assets/img-next.png" alt="" />
+              <img class="img-back" src="" alt="" />
+            </button>
+          </div>
         </div>
       </background>
     </div>
