update mobile section 1 - 4

--- a/index.html
+++ b/index.html
@@ -52,27 +52,37 @@
       <div class="hover-map">
         <div class="hover-box">
           <div class="dot"></div>
-          <p class="hover-title">Backed by top VC</p>
-          <p class="hover-text">Global trade drives economic growth, bridging markets worldwide, shaping industries, and creating opportunities amid constant geopolitical shifts.</p>
+          <div class="hover-desc-box">
+            <p class="hover-title">Backed by top VC</p>
+            <p class="hover-text">Global trade drives economic growth, bridging markets worldwide, shaping industries, and creating opportunities amid constant geopolitical shifts.</p>
+          </div>
+          
         </div>
 
         <div class="hover-box">
           <div class="dot"></div>
-          <p class="hover-title">Net-zero deliverables</p>
-          <p class="hover-text">Local innovation fuels global impact, transforming industries, and driving regional growth through cutting-edge technology and creative solutions.</p>
+          <div class="hover-desc-box">
+            <p class="hover-title">Net-zero deliverables</p>
+            <p class="hover-text">Local innovation fuels global impact, transforming industries, and driving regional growth through cutting-edge technology and creative solutions.</p>
+          </div>
+          
         </div>
 
         <div class="hover-box">
           <div class="dot"></div>
-          <p class="hover-title">Global network</p>
-          <p class="hover-text">Emerging trends connect global and local markets, reshaping industries with sustainability, digital transformation, and consumer-driven shifts.</p>
+          <div class="hover-desc-box">
+            <p class="hover-title">Global network</p>
+            <p class="hover-text">Emerging trends connect global and local markets, reshaping industries with sustainability, digital transformation, and consumer-driven shifts.</p>
+          </div>
         </div>
 
         <div class="hover-box">
           <div class="dot"></div>
-          <p class="hover-title">25 years in facilities</p>
-          <p class="hover-text">Adapt to volatility by leveraging strategic insights, turning market challenges into opportunities for growth and resilience.</p>
-        </div>
+          <div class="hover-desc-box">
+            <p class="hover-title">25 years in facilities</p>
+            <p class="hover-text">Adapt to volatility by leveraging strategic insights, turning market challenges into opportunities for growth and resilience.</p>
+          </div>
+          </div>
       </div>
 
       <!-- SECTION 2 -->
@@ -192,7 +202,7 @@
 
     <!-- Team Section or SECTION 4 -->
     <div class="team-section">
-      <p class="title-team">Aden Energies Global Leadership​</p>
+      <p class="title-team">Aden Energies Global Leadership</p>
       <content>
         <div class="team-member">
           <div class="box-team">
